--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://github.com/zertex/yii2-elfinder",
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
-    "minimum-stability":"stable",
+    "minimum-stability":"dev",
     "authors": [
         {
             "name": "Mihail",
